[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jitctl"
version = "0.1.0"
description = "Hints-based developer control over CPython's JIT compiler."
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
